# PAQN

./: .gitmodules  CMakeLists.txt  Engine.txt  KestoG_1_5.cpp  paqn_d2cfr_model.pth  paqn_model_latest.pth  paqn_regret_model.pth  pybind_wrapper.cpp
cpp_src/: DeepMCCFR.cpp  DeepMCCFR.hpp  InferenceQueue.hpp  SharedReplayBuffer.hpp  board.hpp  card.hpp  constants.hpp  game_state.cpp  game_state.hpp  hand_evaluator.hpp  main_test.cpp
cpp_src/ompeval/omp/: HandEvaluator.cpp  HandEvaluator.h
opponent_pool/: paqn_model_v1.pth  paqn_model_v10.pth  paqn_model_v11.pth  paqn_model_v12.pth  paqn_model_v13.pth  paqn_model_v14.pth  paqn_model_v15.pth  paqn_model_v16.pth  paqn_model_v17.pth  paqn_model_v18.pth  paqn_model_v19.pth  paqn_model_v2.pth  paqn_model_v20.pth  paqn_model_v21.pth  paqn_model_v22.pth  paqn_model_v23.pth  paqn_model_v24.pth  paqn_model_v25.pth  paqn_model_v26.pth  paqn_model_v27.pth  paqn_model_v28.pth  paqn_model_v29.pth  paqn_model_v3.pth  paqn_model_v30.pth  paqn_model_v31.pth  paqn_model_v32.pth  paqn_model_v33.pth  paqn_model_v34.pth  paqn_model_v35.pth  paqn_model_v36.pth  paqn_model_v37.pth  paqn_model_v38.pth  paqn_model_v39.pth  paqn_model_v4.pth  paqn_model_v5.pth  paqn_model_v6.pth  paqn_model_v7.pth  paqn_model_v8.pth  paqn_model_v9.pth
python_src/: featurizer.py  model.py  train.py
tools/: explore_samples.py  sanity_live_check.py
